<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/heading"
        style="@style/header2"/>

    <LinearLayout
        style="@style/card_b"
        >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon"
                android:src="@drawable/data"/>

            <TextView
                style="@style/title"
                android:text="@string/dataTitle"/>
        </LinearLayout>


        <TextView
            style="@style/body"
            android:text="@string/dataBody"/>

    </LinearLayout>

    <LinearLayout
        style="@style/card_b"
        >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon"
                android:src="@drawable/battery"/>

            <TextView
                style="@style/title"
                android:text="@string/batteryTitle"/>
        </LinearLayout>


        <TextView
            style="@style/body"
            android:text="@string/batteryBody"/>

    </LinearLayout>

    <LinearLayout
        style="@style/card_y"
        >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon"
                android:src="@drawable/storage"/>

            <TextView
                style="@style/title"
                android:text="@string/storageTitle"/>
        </LinearLayout>


        <TextView
            style="@style/body"
            android:text="@string/storageBody"/>

    </LinearLayout>

    <LinearLayout
        style="@style/card_r"
        android:id="@+id/help">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon"
                android:src="@drawable/tips"/>

            <TextView
                style="@style/title"
                android:text="@string/tipTitle"/>
        </LinearLayout>


        <TextView
            style="@style/body"
            android:text="@string/tipBody"/>
    </LinearLayout>

</LinearLayout>