<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/heading"
        style="@style/header2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <LinearLayout
            style="@style/card_r2"
            >

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon"
                    android:src="@drawable/data"/>

                <TextView
                    style="@style/title"
                    android:text="@string/dataTitle"/>
            </LinearLayout>


            <TextView
                style="@style/body"
                android:text="@string/dataBody"/>

        </LinearLayout>

        <LinearLayout
            style="@style/card_b2"
            >

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon"
                    android:src="@drawable/battery"/>

                <TextView
                    style="@style/title"
                    android:text="@string/batteryTitle"/>
            </LinearLayout>


            <TextView
                style="@style/body"
                android:text="@string/batteryBody"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <LinearLayout
            style="@style/card_y2"
            >

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon"
                    android:src="@drawable/storage"/>

                <TextView
                    style="@style/title"
                    android:text="@string/storageTitle"/>
            </LinearLayout>


            <TextView
                style="@style/body"
                android:text="@string/storageBody"/>

        </LinearLayout>

        <LinearLayout
            style="@style/card_r2"
            android:id="@id/help"
            >

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon"
                    android:src="@drawable/tips"/>

                <TextView
                    style="@style/title"
                    android:text="@string/tipTitle"/>
            </LinearLayout>


            <TextView
                style="@style/body"
                android:text="@string/tipBody"/>

        </LinearLayout>

     </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <LinearLayout
            style="@style/card_b2"
            >

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon"
                    android:src="@drawable/lock"/>

                <TextView
                    style="@style/title"
                    android:text="@string/lockTitle"/>
            </LinearLayout>


            <TextView
                style="@style/body"
                android:text="@string/lockBody"/>

        </LinearLayout>

        <LinearLayout
            style="@style/card_y2"
            >

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon"
                    android:src="@drawable/rain"/>

                <TextView
                    style="@style/title"
                    android:text="@string/weatherTitle"/>
            </LinearLayout>


            <TextView
                style="@style/body"
                android:text="@string/weatherBody"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>