<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/heading"
        style="@style/data"/>

    <LinearLayout
        style="@style/card_s2"
        >

        <ImageView
            style="@style/icon_s"
            android:src="@drawable/data"/>

        <TextView
            style="@style/text"
            android:text="@string/dataTitle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/card_s2"
        >

        <ImageView
            style="@style/icon_s"
            android:src="@drawable/battery"/>

        <TextView
            style="@style/text"
            android:text="@string/batteryTitle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/card_s2"
        >

        <ImageView
            style="@style/icon_s"
            android:src="@drawable/storage"/>

        <TextView
            style="@style/text"
            android:text="@string/storageTitle"/>

    </LinearLayout>


    <LinearLayout
        style="@style/card_s2"
        android:id="@id/help"
        >

        <ImageView
            style="@style/icon_s"
            android:src="@drawable/tips"/>

        <TextView
            style="@style/text"
            android:text="@string/tipSmall"/>

    </LinearLayout>


</LinearLayout>