<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/popTitle"
        android:padding="10dp"
        android:textSize="24sp"/>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/darkgray"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_margin="15dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/action_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/action"/>

</LinearLayout>